--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,19 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?android:attr/actionBarSize"
-        android:orientation="vertical"
-        android:padding="2dp">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/reminder_time"/>
+            style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
+            android:text="@string/pref_sync_frequency_caption"
+            android:paddingRight="4dp"/>
 
-        <EditText
-            android:id="@+id/reminderTimeView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/reminder_time"
-            android:inputType="time"/>
+        <Spinner
+            android:id="@+id/syncFreqSpinner"
+            android:layout_width="wrap_content"
+            style="@style/Widget.AppCompat.Spinner.DropDown"
+            android:paddingLeft="10dp"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </FrameLayout>
